# nanospace2025

./: .gitignore  README.md  md_snippets  pyproject.toml
lecture/: ~$gp_visual_intro.pptx
lecture/figures/: gp_sampling_code.py
lecture/figures/additive_gp/: additve_gp.py
lecture/figures/gp_regression/: different_kernels.py  gp_lml.py  gp_lml_2.py  gp_regres_1.py  gp_regres_2.py  gp_regres_3.py  gp_regres_4.py  gp_regres_5.py  gp_regres_6.py  gp_regres_7.py  gp_regres_8.py  gp_regres_9.py
lecture/figures/gp_sampling/: gp_sampling_1.py  gp_sampling_2.py  gp_sampling_3.py  gp_sampling_4.py  gp_sampling_5.py  gp_sampling_6.py  gp_sampling_7.py  gp_sampling_8.py
lecture/figures/slide_background/: make_background.py  make_banner.py
notebooks/: kernel_widget.ipynb  make_notebook.py  tutorial_bo.ipynb  tutorial_bo_master.ipynb  tutorial_gp.ipynb  tutorial_gp_master.ipynb
notebooks/.ipynb_checkpoints/: tutorial_bayesian_optimization-checkpoint.ipynb  tutorial_bo-checkpoint.ipynb  tutorial_gp-checkpoint.ipynb  tutorial_gp_master-checkpoint.ipynb  widget_test-checkpoint.ipynb
notebooks/old/: tutorial_bayesian_optimization.ipynb  widget_test.ipynb
notebooks/student_versions/: tutorial_bo_student.ipynb  tutorial_gp_student.ipynb
notebooks/student_versions/.ipynb_checkpoints/: tutorial_gp_student-checkpoint.ipynb
src/bayes_nanospace2025/: __init__.py
src/bayes_nanospace2025/lecture/: __init__.py  plt_settings.py
src/bayes_nanospace2025/old_stuff/: __init__.py  bayesian_search.py  dataset.py  descriptors.py  emulator.py  interpolation.py  model.py  plot.py
(+12 files in other folders)
