[project]
name = "bayes-nanospace2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "me@mads-peter.com" }
]
requires-python = ">=3.11.9"
dependencies = [
    "ase>=3.25.0",
    "numpy==1.26.4",
    "matplotlib==3.10.0",
]

[project.scripts]
bayes-nanospace2025 = "bayes_nanospace2025:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
]
